# bert-chatbot

./: .gitignore  DATA_CHAT_2.xlsx  README.md  main.py  pyproject.toml  requirements.txt  tasks.json  test_cache_load.pkl  test_data_production.xlsx
.cursor/: task.md
.cursor/rules/: project-info.mdc  project-rules.mdc
bert_chatbot/: __init__.py  __main__.py  cli.py  web_app.py
bert_chatbot/commands/: __init__.py  chat_cmd.py  common.py
bert_chatbot/core/: __init__.py  chatbot.py
bert_chatbot/core/stubs/: __init__.py  sentence_transformers.py
hello/: __init__.py  __main__.py  cli.py
hello/commands/: common.py  hi_cmd.py
templates/: chat_response_snippet.html  index.html
tests/: conftest.py  helpers.py  test_cli.py
tests/commands/: __init__.py  test_chat_cmd.py  test_common.py
tests/core/: test_chatbot.py
